Fixed pin classes on IE

--- a/web/themes/npm/assets/styles/utilities/pin.css
+++ b/web/themes/npm/assets/styles/utilities/pin.css
@@ -37,3 +37,18 @@
     margin-right: calc((1160px - 100vw) / 2);
   }
 }
+
+[data-label="audiences"] .pin-r {
+  @apply float-right
+    mx-0;
+
+  @screen lg {
+    @apply -mr-20
+      w-full;
+  }
+
+  @media (min-width: 1200px) {
+    margin-right: calc((1280px - 100vw) / 2);
+    width: calc(100% + ((100vw - 1280px) / 2));
+  }
+}
